--- a/StockGPT.ipynb
+++ b/StockGPT.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOEnSzihvCIqFx9a62iNTL1"
+      "authorship_tag": "ABX9TyPu8EV7KI8uyADVAozMoKiX"
     },
     "kernelspec": {
       "name": "python3",
@@ -37,8 +37,7 @@
       ],
       "source": [
         "from google.colab import userdata\n",
-        "api_key=userdata.get('GeminiAPI')\n",
-        "print(api_key)"
+        "api_key=userdata.get('GeminiAPI')"
       ]
     },
     {
