--- a/StockGPT.ipynb
+++ b/StockGPT.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPu8EV7KI8uyADVAozMoKiX"
+      "authorship_tag": "ABX9TyOpkN5Pp7TLtcmyMrp4YcX2",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,28 +17,13 @@
   },
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
       "metadata": {
-        "id": "z8QJIUx53mMO",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "collapsed": true,
-        "outputId": "dfb85351-93c3-47d1-c074-8ca86ae49ce1"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "AIzaSyBIZ8Cq70JcM-nQd_THDHqHput0FuTcMiI\n"
-          ]
-        }
-      ],
       "source": [
-        "from google.colab import userdata\n",
-        "api_key=userdata.get('GeminiAPI')"
+        "<a href=\"https://colab.research.google.com/github/AkashSasikumar47/stock-transaction-assistant/blob/main/StockGPT.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
